<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, UbihelperActivity!</string>
    <string name="app_name">Ubihelper</string>
    <string name="general_preferences">General Preferences</string>
    <string name="run_preference_title">Run Ubihelper</string>
    <string name="run_preference_summary">Run the ubihelper service in the background.</string>
    <string name="http_preferences">HTTP Preferences</string>
    <string name="http_port_preference_title">Port number</string>
    <string name="http_path_preference_title">Path (secret)</string>
    <string name="notification_start_message">Started ubihelper service</string>
    <string name="notification_title">Ubihelper service</string>
    <string name="notification_description">Manage the running ubihelper service</string>
    <string name="test_button">Test Http</string>
    <string name="test_app_name">Test ubihelper</string>
    <string name="wifidisc_preferences">Wifi Discovery</string>
    <string name="wifidisc_preference_title">Enable Wifi Discovery</string>
    <string name="wifidisc_preference_summary">Allow device to be discovered over wifi</string>
    <string name="wifistatus_option_title">Wifi Status</string>
    <string name="wifidisc_name_preference_title">Public device name</string>

</resources>