<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <PreferenceCategory
            android:title="@string/general_preferences">

        <CheckBoxPreference
                android:key="run_service"
                android:title="@string/run_preference_title"
                android:summary="@string/run_preference_summary" />

    </PreferenceCategory>
    
    <PreferenceCategory
            android:title="@string/http_preferences">

		<EditTextPreference 
		    android:key="http_port"
		    android:title="@string/http_port_preference_title" 
		    android:defaultValue="8180"
		    />
		
		<EditTextPreference 
		    android:key="http_path"
		    android:title="@string/http_path_preference_title" 
		    android:defaultValue="/ubihelper"	    
		    />
		
		</PreferenceCategory>
    
</PreferenceScreen>